Support organization string in user profile
